--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/plugin-webpack": "^7.5.0",
     "@electron/fuses": "^1.8.0",
     "@types/react-dom": "^18.3.1",
+    "@types/better-sqlite3": "^7.6.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -48,6 +49,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "better-sqlite3": "^11.5.0",
     "electron-squirrel-startup": "^1.0.1",
     "jotai": "^2.10.3",
     "react": "^18.3.1",
